--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@
 
 # Site
 title: Hiperion's Blog
-subtitle: Coding anything
-description: Just a simple man
+subtitle: Coding Anything
+description: I'm a good man
 author: Haibo Tian
 language: zh-CN
 timezone:
@@ -29,7 +29,7 @@ skip_render:
 
 # Writing
 new_post_name: :title.md # File name of new posts
-default_layout: post
+default_layout: postcomment #post
 titlecase: false # Transform title into titlecase
 external_link: true # Open external links in new tab
 filename_case: 0
