初见成效，完成了大部分配置，还有很多要做。

--- a/_config.yml
+++ b/_config.yml
@@ -65,8 +65,8 @@ pagination_dir: page
 ## Plugins: http://hexo.io/plugins/
 ## Themes: http://hexo.io/themes/
 # theme: maupassant
-#theme: next
-theme: landscape
+theme: next
+#theme: landscape
 
 # Deployment
 ## Docs: http://hexo.io/docs/deployment.html
